
 - Update Crash to ``0.22.1`` which includes the following changes:

    - Added a status toolbar that prints the current session info.

    - Start autocompletion for non-command keys at the 3rd character.

 - Change semantics of ``IN`` operator to behave like ``= ANY``. The argument
   list for ``IN`` now has to be comprised of the same type. For example,
   this is now an illegal ``IN`` query because the list mixes integer and
   double type::

     Select * from t1 where id IN (1, 1.2, 2)

   This would get translated into the following and throw an error::

     Select * from t1 where id = ANY([1, 1.2, 3])

 - Introduce support for single column subselects in `ANY` and `IN`, e.g.::

     Select * from t1 where id = ANY(select id from t2)
     Select * from t1 where id IN (select id from t2)

 - Improved resiliency of the table rename operation.

 - Relaxed column naming restrictions.

 - Improved resiliency of drop, close and open table operations

 - Added empty tables `KEY_COLUMN_USAGE` and `REFERENTIAL_CONSTRAINTS` to
  `INFORMATION_SCHEMA` to be more compliant with the SQL99 standard.

Fixes
=====

 - Fixed issue that caused the Monitoring tab in the Admin UI to redirect
   to ``/401`` when the user didn't have privileges for ``sys.cluster`` 
   or ``sys.jobs_log``.

 - Fix display of redundant parenthesis around expressions visible in 
   `SHOW CREATE` and `EXPLAIN` statements.

 - Fixed an issue that caused `path.logs` setting in `crate.yml` to be ignored.

 - Fixed column name in output by removing new lines when select list contains
   subquery. E.g.::

     SELECT 1 =
         (SELECT 1)

 - Fixed an issue that prevents CrateDB from bootstrap on Windows hosts.

 - Fixed an issue that caused queries with ``IS NULL`` or ``IS NOT NULL` on
   columns of type ``geo_point`` to fail.

 - Changed ``crate`` unix/linux startup script to use standard ``sh`` syntax
   instead of ``bash`` specific syntax.
